[package]
name = "notifica"
version = "1.0.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/frewsxcv/rust-notifica"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "3.3"

[target.'cfg(windows)'.dependencies]
winrt = {version = "0.3.0", features = ["windows-data", "windows-ui"]}