[package]
name = "notifica"
version = "2.0.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/frewsxcv/rust-notifica"
description = "Small, cross-platform Rust crate for sending system notifications"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.3.0"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "3.3"

[target.'cfg(windows)'.dependencies]
winrt = {version = "0.6.0", features = ["windows-data", "windows-ui"]}
